Fix text wrap on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3930,7 +3930,7 @@ ul {
     width: auto;
   }
   .social-text-wrap {
-    width: 28ch;
+    width: 25ch;
   }
   .hero-illustration__liquid-guy {
     right: 16%;
